[package]
edition = "2021"
name = "spl-associated-token-account"
version = "1.1.3"
description = "Solana Program Library Associated Token Account"


[lib]
crate-type = ["cdylib", "lib", ]


[features]
default = []
no-entrypoint = []
inline = []


[dependencies]
assert_matches = "1.5.0"
borsh = "0.9.1"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
num_enum = "0.5.4"

solana-program = { path="../solana-program" }
spl-token = { path="../spl-token", features = ["no-entrypoint"]}
