[package]
edition = "2021"
name = "spl-token"
version = "3.5.0"
description = "Solana Program Library Token"


[lib]
crate-type = ["cdylib", "lib", ]


[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"

solana-program = { path="../solana-program" }


[features]
default = []
no-entrypoint = []
inline = []
