[package]
name = "descriptor-contract"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]


[features]
default = []
no-entrypoint = []
inline = []


[dependencies]
borsh = {workspace = true}
num-derive = {workspace = true}
num-traits = {workspace = true}
thiserror = {workspace = true}
ahash = {workspace = true}

[target.'cfg(not(target_arch = "solana"))'.dependencies]
solana-program = {path = "../../solana-program"}
[else]
solana-program = "=1.16.10"
